# Voiceable-Slack-Challenge

./: .gitignore  Cargo.toml  README.md
AdminUI/: README.md  angular.json  package-lock.json  package.json
AdminUI/e2e/src/: app.e2e-spec.ts
AdminUI/src/: karma.conf.js
AdminUI/src/app/: app.component.spec.ts
migrations/2018-03-17-180012_heroes/: up.sql
migrations/2019-07-17-21-30-challenges/: up.sql
migrations/2019-07-19-162638_access_token/: down.sql  up.sql
migrations/2019-07-20-085053_authorization/: down.sql  up.sql
src/: access_token.rs  auth.rs  authorization.rs  challenge.rs  db.rs  hero.rs  main.rs  schema.rs  team.rs  webhooks.rs
templates/: admin.hbs  index.hbs
