[package]
name = "hero-api"
version = "0.1.0"
authors = ["sean"]

[dependencies]
rocket = "0.4.2"
rocket_contrib = {version = "0.4.2", features = ["handlebars_templates"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.4.6", features = ["postgres", "r2d2"] }
clokwerk = "0.2.1"
reqwest = "0.9.18"
uuid = "0.7"
